// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichText RichText and loom link in text flag return text with loom iframe 1`] = `
<div
  class="container"
>
  <p>
    test1 
  </p>
  <div>
    <iframe
      allowfullscreen=""
      class="video"
      frameborder="0"
      mozallowfullscreen=""
      src="https://www.useloom.com/embed/7f68fa7f01e349cab91b0c36168f68c3"
      webkitallowfullscreen=""
    />
  </div>
  <p />
  

</div>
`;

exports[`RichText RichText and youtube and loom link in text flag return text with youtube and loom iframe 1`] = `
<div
  class="container"
>
  <p>
    test1 
  </p>
  <div>
    <iframe
      allowfullscreen=""
      class="video"
      frameborder="0"
      mozallowfullscreen=""
      src="https://www.useloom.com/embed/7f68fa7f01e349cab91b0c36168f68c3"
      webkitallowfullscreen=""
    />
  </div>
   
  <div>
    <iframe
      allowfullscreen=""
      class="video"
      frameborder="0"
      mozallowfullscreen=""
      src="//www.youtube.com/embed/jNQXAC9IVRw"
      webkitallowfullscreen=""
    />
  </div>
  <p />
  

</div>
`;

exports[`RichText RichText and youtube in text flag return text with youtube iframe 1`] = `
<div
  class="container"
>
  <p>
    test1 
  </p>
  <div>
    <iframe
      allowfullscreen=""
      class="video"
      frameborder="0"
      mozallowfullscreen=""
      src="//www.youtube.com/embed/jNQXAC9IVRw"
      webkitallowfullscreen=""
    />
  </div>
  <p />
  

</div>
`;

exports[`RichText renders correct html for mentions and links 1`] = `
<div
  class="container"
>
  <p>
    Hello, 
    <span
      class="mention"
    >
      @Jyoti Puri
    </span>
    , look here: link: 
    <a
      href="http://pneumatic.app/"
      target="_blank"
    >
      http://pneumatic.app/
    </a>
    <a />
  </p>
  <a>
    

  </a>
</div>
`;

exports[`RichText renders correct html for plain text 1`] = `
<div
  class="container"
>
  <p>
    Some plain text
  </p>
  

</div>
`;
